--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'QL'
 - !lcsh 'Bees'
+- GITenberg
 title: Het leven der bijen
 url: http://www.gutenberg.org/ebooks/38522
